apps/dev/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: dev
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
